--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,8 @@
 env: "dev" # dev, prod
-host_db: "localhost"
+host_db: "db"
+port_db: 5432
 user_db: "auth_service"
 password_db: "12345678"
 name_db: "VK_Authorization"
+server:
+  port: ":8080"
