--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,19 @@ services:
       POSTGRES_INITDB_ARGS: "-A md5"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U auth_service"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: always
   server:
     build:
       context: .
-    links:
-      - db
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: always
     ports:
       - "8080:8080"
 
